--- a/Roeivereniging/View/Events/EditEventWindow.xaml
+++ b/Roeivereniging/View/Events/EditEventWindow.xaml
@@ -24,8 +24,9 @@
 
         <Label Grid.Column="0" Grid.Row="0" Content="Titel" Padding="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <TextBox x:Name="Title" Grid.ColumnSpan="1" Grid.Row="1" Grid.Column="0" Margin="5,0,5,0" HorizontalAlignment="Stretch" Text="{Binding name}" VerticalAlignment="Stretch"/>
-        <ComboBox Grid.ColumnSpan="1" Grid.Row="1" Grid.Column="2" Margin="10,0,10,0" HorizontalAlignment="Stretch" VerticalAlignment="Center">
-            <ComboBoxItem Content="{Binding type}"/>
+        <ComboBox x:Name="TypeBox" Grid.ColumnSpan="1" Grid.Row="1" Grid.Column="2" Margin="10,0,10,0" HorizontalAlignment="Stretch" VerticalAlignment="Center">
+            <ComboBoxItem Content="Wedstrijd"/>
+            <ComboBoxItem Content="Tourtocht"/>
         </ComboBox>
         <Label Grid.Row="2" Content="Beschrijving" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Padding="10,0,0,0"/>
         <TextBox x:Name="DescriptionBox" Grid.ColumnSpan="3" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding description}" VerticalAlignment="Stretch"/>
@@ -39,14 +40,14 @@
                 <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
 
-            <DatePicker x:Name="StartDatePicker" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top" FirstDayOfWeek="Monday" AutomationProperties.IsRequiredForForm="True" Width="220"/>
-            <DatePicker x:Name="EndDatePicker" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top" FirstDayOfWeek="Monday" AutomationProperties.IsRequiredForForm="True" Width="220"/>
+            <DatePicker SelectedDate="{Binding start}" x:Name="StartDatePicker" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top" FirstDayOfWeek="Monday" AutomationProperties.IsRequiredForForm="True" Width="220"/>
+            <DatePicker SelectedDate="{Binding end}"  x:Name="EndDatePicker" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top" FirstDayOfWeek="Monday" AutomationProperties.IsRequiredForForm="True" Width="220"/>
 
             <Button Content="Bewerk beschikbare boten" Grid.Column="0" Grid.Row="1" Click="Button_Click" Margin="10"/>
             <Button Content="Bewerk map" Grid.Column="1" Grid.Row="1" Click="EditMap_Click" Margin="10"/>
         </Grid>
 
-        <Label Content="maximum leden" Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Padding="0" VerticalAlignment="Bottom"/>
+        <Label Content="Maximum leden" Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Padding="5,0,0,0" VerticalAlignment="Bottom"/>
         <TextBox x:Name="maxmemberTb" Grid.ColumnSpan="1" Grid.Row="1" Grid.Column="1" Margin="5,0,5,0" HorizontalAlignment="Stretch" Text="{Binding maxMembers}" VerticalAlignment="Stretch"/>
     </Grid>
 </Window>
