--- a/Roeivereniging/View/ForgotPasswordWindow.xaml
+++ b/Roeivereniging/View/ForgotPasswordWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
 
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label x:Name="PbUsernamePlaceholder" Panel.ZIndex="1" Content="Username" Margin="5,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Opacity="0.75" HorizontalContentAlignment="Left" Padding="0,0,0,0"  IsHitTestVisible="False"></Label>
+            <Label x:Name="PbUsernamePlaceholder" Panel.ZIndex="1" Content="Gebruikersnaam" Margin="5,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Opacity="0.75" HorizontalContentAlignment="Left" Padding="0,0,0,0"  IsHitTestVisible="False"></Label>
             <TextBox x:Name="TbUsername" Panel.ZIndex="0" HorizontalAlignment="Left" Margin="0,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="140" IsKeyboardFocusedChanged="TbUsername_IsKeyboardFocusedChanged"/>
             <Label x:Name="PbEmailPlaceholder" Panel.ZIndex="1" Content="Email" Margin="5,20,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Opacity="0.75" HorizontalContentAlignment="Left" Padding="0,0,0,0"  IsHitTestVisible="False"></Label>
             <TextBox x:Name="TbEmail" Panel.ZIndex="0" HorizontalAlignment="Left" Margin="0,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="140" IsKeyboardFocusedChanged="TbEmail_IsKeyboardFocusedChanged"></TextBox>
