--- a/Roeivereniging/View/MainWindow.xaml
+++ b/Roeivereniging/View/MainWindow.xaml
@@ -6,13 +6,13 @@
         xmlns:local="clr-namespace:View"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" ResizeMode="CanResize" WindowState="Maximized" Loaded="Window_Loaded">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="NoResize" WindowState="Maximized" WindowStyle="None" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
         </Grid.RowDefinitions>
-        <Frame Grid.Row="1" Margin="15,15,15,15" Name="Frame" VerticalAlignment="Stretch" NavigationUIVisibility="Hidden"/>
+        <!--<Frame Grid.Row="1" Margin="15,15,15,15" Name="Frame" VerticalAlignment="Stretch" NavigationUIVisibility="Hidden"/>-->
         
         <Rectangle Grid.Row="0" RadiusX="0" RadiusY="0" Height="70" Fill="#FF6BB0E8" Margin="0,0,0,10" StrokeThickness="0">
             <Rectangle.Effect>
@@ -20,8 +20,8 @@
             </Rectangle.Effect>
         </Rectangle>
         <StackPanel Grid.Row="0" x:Name="Header" Orientation="Horizontal" Height="50" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
-        <Button Grid.Row="0" x:Name="BtnAccount" fa:Awesome.Content="UserCircle" FontSize="40" MinWidth="100" Margin="10,0,120,0" HorizontalAlignment="Right" VerticalAlignment="Stretch" Click="BtnAccount_Click"></Button>
-        <Button Grid.Row="0" x:Name="BtnLogout" fa:Awesome.Content="SignOut" FontSize="40" MinWidth="100" Margin="10,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Stretch" Click="BtnLogout_Click"></Button>
+        <Button Grid.Row="0" x:Name="BtnAccount" fa:Awesome.Content="UserCircle" FontSize="40" MinWidth="100" Margin="10,0,120,10" HorizontalAlignment="Right" VerticalAlignment="Stretch" Click="BtnAccount_Click"></Button>
+        <Button Grid.Row="0" x:Name="BtnLogout" fa:Awesome.Content="SignOut" FontSize="40" MinWidth="100" Margin="10,0,10,10" HorizontalAlignment="Right" VerticalAlignment="Stretch" Click="BtnLogout_Click"></Button>
         <Frame Grid.Row="1" Margin="15,15,15,15" Name="Frame" VerticalAlignment="Stretch" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
