--- a/Roeivereniging/View/ReservePage.xaml
+++ b/Roeivereniging/View/ReservePage.xaml
@@ -45,7 +45,7 @@
                 <ComboBoxItem>B-boten</ComboBoxItem>
                 <ComboBoxItem>C-boten</ComboBoxItem>
                 <ComboBoxItem>Wherry</ComboBoxItem>
-                <ComboBoxItem IsSelected="True">All</ComboBoxItem>
+                <ComboBoxItem IsSelected="True">Alles</ComboBoxItem>
             </ComboBox>
             <Label Content="Aantal roeiers:" Grid.Column="1" HorizontalAlignment="Left" Margin="0,50,0,0" Grid.Row="1" VerticalAlignment="Top" FontSize="24"/>
             <TextBox x:Name="TbPersons" PreviewTextInput="NumberValidationTextBox" Grid.Column="2" HorizontalAlignment="Center" Margin="0,50,0,0" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="24" TextChanged="TbPersons_TextChanged"/>
@@ -93,7 +93,7 @@
             </Grid.RowDefinitions>
 
             <Button Content="Reserveer" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Click="Button_Click"/>
-            <Button Content="Reset" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Foreground="Black" Background="#00DDDDDD" BorderThickness="2,2,2,2" Click="Button_Click_1"/>
+            <Button Content="Reset filters" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Foreground="Black" Background="#00DDDDDD" BorderThickness="2,2,2,2" Click="Button_Click_1"/>
             <DatePicker x:Name="Date" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24" FirstDayOfWeek="Monday" SelectedDateChanged="Date_SelectedDateChanged"/>
             <Label x:Name="LbDuur" Content="Duur: --:--" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24"/>
 
@@ -112,16 +112,14 @@
 
 
         <Grid Grid.Row="0" Grid.Column="1" Margin="38,72,66,53" Grid.RowSpan="2">
-            <ListView  x:Name="LbBoats" d:ItemsSource="{d:SampleData ItemCount=50} " FontSize="24" VerticalContentAlignment="Stretch">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Type"  DisplayMemberBinding="{Binding type}" />
-                        <GridViewColumn Header="Naam" Width="auto" DisplayMemberBinding="{Binding name}" />
-                        <GridViewColumn Header="Stuur" Width="auto" DisplayMemberBinding="{Binding steer}" />
-                        <GridViewColumn Header="Scullen" Width="auto" DisplayMemberBinding="{Binding sculling}" />
-                    </GridView>
-                </ListView.View>
-            </ListView>
+            <DataGrid  x:Name="LbBoats" AutoGenerateColumns="False" FontSize="24" VerticalContentAlignment="Stretch" SelectionMode="Single">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Type"  Width="*" Binding="{Binding type, Mode=oneway}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Naam" Width="*" Binding="{Binding name, Mode=OneWay}"></DataGridTextColumn>
+                    <DataGridCheckBoxColumn  Header="Stuur" Width="*" Binding="{Binding steer, Mode=OneWay}"></DataGridCheckBoxColumn>
+                    <DataGridCheckBoxColumn Header="Scullen" Width="*" Binding="{Binding sculling, Mode=OneWay}"></DataGridCheckBoxColumn>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
         <Label Grid.Column="0" Grid.Row="0" Content="Filters" HorizontalAlignment="Left" Margin="20,30,0,0" VerticalAlignment="Top" FontSize="24"/>
         <Label Grid.Column="1" Content="Selecteer een boot:" HorizontalAlignment="Left" Margin="20,30,0,0" VerticalAlignment="Top" FontSize="24"/>
